[project]
name = "gesture-box-detection"
version = "0.1.0"
description = "Draw rectangles in the air with hand gestures using OpenCV and MediaPipe."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mediapipe==0.10.21",
    "jax==0.4.38",
    "jaxlib==0.4.38",
    "opencv-contrib-python>=4.10.0.84",
    "numpy>=1.26.0,<2",
]

[project.scripts]
gesture-box = "gesture_box_detection.app:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
